force-app/main/default/objects/Waitlist__c/Waitlist__c.object-meta.xml
<CustomObject>
    <description>Oversubscription overflow record for a DPEG offering. Tracks an investing entity&apos;s position in the waitlist queue, requested amount, and auto-promotion behavior when capacity frees up.</description>
    <label>Waitlist</label>
    <nameField>
        <displayFormat>WL-{0000}</displayFormat>
        <label>Waitlist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waitlists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>