force-app/main/default/objects/Waitlist__c/fields/Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Added_Date__c</fullName>
    <description>Date the investing entity was added to the waitlist.</description>
    <inlineHelpText>Enter the date this entry was added to the waitlist.</inlineHelpText>
    <label>Added Date</label>
    <type>Date</type>
</CustomField>