force-app/main/default/objects/Waitlist__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Requested investment amount for this waitlist entry.</description>
    <inlineHelpText>Enter the requested allocation amount in USD.</inlineHelpText>
    <label>Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>