force-app/main/default/objects/Waitlist__c/fields/Auto_Promote__c.field-meta.xml
<CustomField>
    <fullName>Auto_Promote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this entry should be automatically promoted when capacity frees up (e.g., on a cancellation).</description>
    <inlineHelpText>Checked to auto-promote this entry when an allocation opens.</inlineHelpText>
    <label>Auto Promote</label>
    <type>Checkbox</type>
</CustomField>