force-app/main/default/objects/Waitlist__c/fields/Investing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Investing_Entity__c</fullName>
    <label>Investing Entity</label>
    <description>The investing entity (Account) waiting for an allocation in the offering.</description>
    <inlineHelpText>Select the investing-entity Account on the waitlist.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Waitlist Entries</relationshipLabel>
    <relationshipName>Waitlist_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>