force-app/main/default/objects/Waitlist__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The oversubscribed offering this waitlist entry applies to.</description>
    <inlineHelpText>Select the offering this waitlist entry is for.</inlineHelpText>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Waitlist Entries</relationshipLabel>
    <relationshipName>Waitlist_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>