force-app/main/default/objects/Waitlist__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Ordinal position of this entry in the offering&apos;s waitlist queue.</description>
    <inlineHelpText>Enter the queue position (1 = next to be promoted).</inlineHelpText>
    <label>Share Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>