force-app/main/default/objects/Waitlist__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Current state of this waitlist entry.</description>
    <inlineHelpText>Waitlisted = in queue; Promoted = allocated; Withdrawn = removed.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waitlisted</fullName>
                <default>true</default>
                <label>Waitlisted</label>
            </value>
            <value>
                <fullName>Promoted</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>