force-app/main/default/objects/Waitlist__c/validationRules/Position_Min_One.validationRule-meta.xml
<ValidationRule>
    <fullName>Position_Min_One</fullName>
    <active>true</active>
    <description>Requires Waitlist Position to be 1 or greater when a value is entered. Factory-safe: blank positions are allowed; only populated values less than 1 trigger the error.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Position__c)), Position__c &lt; 1)</errorConditionFormula>
    <errorMessage>Waitlist position must be 1 or greater.</errorMessage>
</ValidationRule>