force-app/main/default/objects/Waitlist__c/listViews/Active_Waitlist.listView-meta.xml
<ListView>
    <fullName>Active_Waitlist</fullName>
    <label>Active Waitlist</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Waitlisted</value>
    </filters>
    <columns>NAME</columns>
    <columns>Offering__c</columns>
    <columns>Position__c</columns>
    <columns>Amount__c</columns>
    <columns>Auto_Promote__c</columns>
</ListView>