force-app/main/default/objects/Waitlist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Position__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>